# ARTUI

./: Cargo.toml  Makefile  README.md  config.json
src/: apply.rs  config.rs  main.rs
src/ui/: asusctl.rs  footer.rs  mod.rs  profiles.rs  ryzenadj.rs
